# dedupe

./: CLAUDE.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-03-26-dedupe.md
docs/superpowers/specs/: 2026-03-26-dedupe-design.md
src/dedupe/: cli.py  hasher.py  metadata.py  models.py  mover.py  planner.py  scanner.py  selector.py  viewer.py
tests/: conftest.py  test_cli.py  test_hasher.py  test_metadata.py  test_models.py  test_mover.py  test_planner.py  test_scanner.py  test_selector.py
