[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dedupe"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9",
    "rich>=13",
    "pillow>=10",
    "hachoir>=3.2",
    "pyyaml>=6",
]

[project.scripts]
dedupe = "dedupe.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
